  [30842] Stack read overflow in getaddrinfo in no-aaaa mode (CVE-2023-4527)
  [30843] potential use-after-free in getcanonname (CVE-2023-4806)
  [31184] FAIL: elf/tst-tlsgap
  [31185] Incorrect thread point access in _dl_tlsdesc_undefweak and _dl_tlsdesc_dynamic
  [31476] resolv: Track single-request fallback via _res._flags
  [31890] resolv: Allow short error responses to match any DNS query
  [31965] rseq extension mechanism does not work as intended
  [31968] mremap implementation in C does not handle arguments correctly
  [32052] Name space violation in fortify wrappers
  [32137] libio: Attempt wide backup free only for non-legacy code
  [32231] elf: Change ldconfig auxcache magic number
  [32470] x86: Avoid integer truncation with large cache sizes
  [32582] Fix underallocation of abort_msg_s struct (CVE-2025-0395)
  [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
  [33185] Fix double-free after allocation failure in regcomp

Version 2.36

Major new features:

* Support for DT_RELR relative relocation format has been added to
  glibc.  This is a new ELF dynamic tag that improves the size of
  relative relocations in shared object files and position independent
  executables (PIE).  DT_RELR generation requires linker support for
  -z pack-relative-relocs option, which is supported for some targets
  in recent binutils versions.  Lazy binding doesn't apply to DT_RELR.

* On Linux, the pidfd_open, pidfd_getfd, and pidfd_send_signal functions
  have been added.  The pidfd functionality provides access to a process
  while avoiding the issue of PID reuse on tranditional Unix systems.

* On Linux, the process_madvise function has been added. It has the
  same functionality as madvise but alters the target process identified
  by the pidfd.

* On Linux, the process_mrelease function has been added.  It allows a
  caller to release the memory of a dying process.  The release of the